# home-assistant-climote

./: .coverage  .gitignore  README.md  __init__.py  climate.py  climote.py  climote_service.py  climote_zone.py  config_flow.py  const.py  main.py  manifest.json  pyproject.toml  requirements.test.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
custom_components/: __init__.py
custom_components/climote/: __init__.py  climate.py  climote_service.py  climote_zone.py  config_flow.py  const.py  manifest.json  strings.json
tests/: .coverage  conftest.py  test_climote_zone.py  test_config_flow.py
